<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:gravity="center"
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textColor="@color/secondary_900"
        android:background="@color/primary_600"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand_bold"/>

    <EditText
        android:layout_marginHorizontal="16dp"
        android:layout_margin="8dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:id="@+id/edt_old"
        android:background="@drawable/edittext_border"
        android:drawableTint="@color/primary_600"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/old_password"
        android:paddingLeft="12dp"
        android:textSize="18sp" />

    <EditText
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:id="@+id/edt_new"
        android:background="@drawable/edittext_border"
        android:drawableTint="@color/primary_600"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/new_password"
        android:paddingLeft="12dp"
        android:textSize="18sp" />

    <EditText
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:id="@+id/edt_re_new"
        android:background="@drawable/edittext_border"
        android:drawableTint="@color/primary_600"
        android:fontFamily="@font/quicksand_semi_bold"
        android:hint="@string/re_new_password"
        android:paddingLeft="12dp"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <TextView
            android:id="@+id/tv_cancel"
            android:textSize="18sp"
            android:layout_marginEnd="24dp"
            android:padding="8dp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_600"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/tv_ok"
            android:textSize="18sp"
            android:padding="8dp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_600"
            android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>