<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feedback.FeedbackActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ToolbarLight"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_600"/>

    <ImageView
        android:id="@+id/iv_small_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title_splash"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:padding="16dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/ic_bus"
        android:background="@drawable/corner_20"
        android:backgroundTint="@color/primary_800"
        app:tint="@color/secondary_900" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="24sp"
        android:textColor="@color/secondary_100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/member_title"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/tin_member" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/hoa_member" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/phi_member" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/quicksand_semi_bold"
            android:text="@string/tri_member" />
    </LinearLayout>

</LinearLayout>